# MathSoftware-2023

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  b.txt
.github/workflows/: main.yml
lec0/: Git.md  Makefile.md  README.md
lec01/: Makefile  README.md  environment.aux  environment.out  environment.tex  environment.toc  installed_packages.txt  software.txt
lec01/lsq/: Makefile  README  lsq.bbl  lsq.blg  lsq.tex  lsq_slide.snm  output.eps  testdata.txt
lec01/step-57/: ...
lec02/: Makefile  README.md  navier-stokes.aux  navier-stokes.bbl  navier-stokes.blg  navier-stokes.out  navier-stokes.tex  navier-stokes.toc  pic.tex  references.bib
lec03/: Makefile  README.md  duplicate_checking.sh  gen_data.sh
lec03/data/: data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data2.txt  data20.txt  data21.txt  data22.txt  data23.txt  data24.txt  data25.txt  data26.txt  data27.txt  data28.txt  data29.txt  data3.txt  data30.txt  data31.txt  data32.txt  data33.txt  data34.txt  data35.txt  data36.txt  data37.txt  data38.txt  data39.txt  data4.txt  data40.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt
lec04/: README.md
lec04/demohello/: hello  (+1 more)
lec05/: .fuse_hidden000002e400000009  .fuse_hidden000002f10000000e  .fuse_hidden000002fb0000000f  README.md
lec06/: CMakeLists.txt  Doxyfile  README  README.md  main.cpp
lec06/include/: chick.h
lec06/src/: chick.cpp
lec07/: README  README.md
proj/: Makefile  README  README.md
proj-bonus/: Makefile  README.md
src/: README.md
(+58 files in other folders)
